[tool.poetry]
name = "worst-case-analysis"
version = "0.1.0"
description = ""
authors = ["Matvei Kotenev <matvei.kotenev@hh2e.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
numpy = "^2.0.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
